[package]
name = "floem-component"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floem = {git = "https://github.com/lapce/floem"}
im = "15.1.0"
paste = "1.0.12"
colorsys = "0.6.7"
tokio = { version = "1.29.1", features = ["rt", "time", "macros"], optional = true }
lazy_static = "1.4.0"
tokio-util = "0.7.8"
crossbeam-channel = "0.5.8"
font-awesome = "0.2.0"

[features]
tokio_feature = ["tokio"]



